# freezer-service

./: .gitignore  gunicorn.conf.py  pyproject.toml
categoria_peca/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
categoria_peca/migrations/: 0001_initial.py
estoque/: admin.py  api_urls.py  api_views.py  models.py  urls.py
estoque/migrations/: 0001_initial.py  0002_alter_estoque_id_peca_alter_estoque_table.py  0003_alter_estoque_id_peca.py  0004_alter_estoque_id_peca.py
fornecedor/: models.py
fornecedor/migrations/: 0001_initial.py
gerencia/: asgi.py  settings.py  urls.py  wsgi.py
local_armazenamento/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
local_armazenamento/migrations/: 0001_initial.py  0002_localarmazenamento_cor_referencia.py
movimentacao_estoque/: apps.py  models.py
movimentacao_estoque/migrations/: 0001_initial.py
peca/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
peca/migrations/: 0001_initial.py  0002_alter_peca_options.py  0003_alter_peca_options.py  0004_peca_foto.py  0005_peca_valor.py  0006_peca_qtd_estoque.py
setup/: api_urls.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
templates/categoria_peca/: confirmar_exclusao.html  detalhar_categoria.html  form_categoria.html  listar_categoria.html
templates/local_armazenamento/: confirmar_exclusao.html  detalhar_local.html  form_local.html  listar_locais.html
templates/modal/: resultado_pesquisa.html
templates/partials/: _features.html  _footer.html  _messages.html  _navbar.html  (+1 more)
users/: forms.py  urls.py  views.py
(+17 files in other folders)
